Fix entry body heading spacing

--- a/src/scss/real_site/molecules/entry-body.scss
+++ b/src/scss/real_site/molecules/entry-body.scss
@@ -8,7 +8,7 @@
   h2,
   h3,
   h4 {
-    margin-bottom: $space-xs-relative;
+    margin: $space-md 0 0 0;
 
     color: $color-secondary;
 
